inital version. including request view and upload

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Content reader service",
   "main": "index.js",
   "scripts": {
+    "start": "node ./src/bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,5 +22,22 @@
   "bugs": {
     "url": "https://github.com/fakhrad/contentLoader/issues"
   },
-  "homepage": "https://github.com/fakhrad/contentLoader#readme"
+  "homepage": "https://github.com/fakhrad/contentLoader#readme",
+  "dependencies": {
+    "amqplib": "0.5.3",
+    "async": "2.6.1",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "1.18.3",
+    "compression": "1.7.3",
+    "cookie-parser": "1.4.3",
+    "cors": "2.8.5",
+    "express": "4.16.4",
+    "express-validator": "5.3.1",
+    "helmet": "3.15.0",
+    "http": "0.0.0",
+    "jsonwebtoken": "8.4.0",
+    "morgan": "1.9.1",
+    "path": "0.12.7",
+    "uuid": "3.3.2"
+  }
 }
