--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "contentloader",
   "version": "1.0.0",
   "description": "Content reader service",
-  "main": "index.js",
+  "main": "./src/app.js",
   "scripts": {
     "start": "node ./src/bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +17,7 @@
     "Content",
     "Query"
   ],
+  "type": "module",
   "author": "Fakhreddin Rezaei",
   "license": "ISC",
   "bugs": {
@@ -24,6 +25,7 @@
   },
   "homepage": "https://github.com/fakhrad/contentLoader#readme",
   "dependencies": {
+    "@okgrow/graphql-scalars": "0.4.5",
     "amqplib": "0.5.3",
     "async": "2.6.1",
     "bcrypt-nodejs": "0.0.3",
@@ -32,12 +34,20 @@
     "cookie-parser": "1.4.3",
     "cors": "2.8.5",
     "express": "4.16.4",
+    "express-graphql": "0.8.0",
     "express-validator": "5.3.1",
+    "graphql": "14.3.1",
+    "graphql-tools": "4.0.4",
+    "graphql-type-json": "0.3.0",
     "helmet": "3.15.0",
     "http": "0.0.0",
     "jsonwebtoken": "8.4.0",
+    "merge-graphql-schemas": "1.5.8",
+    "mongodb": "3.2.6",
+    "mongoose": "5.5.12",
     "morgan": "1.9.1",
     "path": "0.12.7",
     "uuid": "3.3.2"
-  }
+  },
+  "devDependencies": {}
 }
