--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "mongoose": "5.5.12",
     "morgan": "1.9.1",
     "path": "0.12.7",
+    "uniqid": "5.0.3",
     "uuid": "3.3.2"
   },
   "devDependencies": {}
