--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./src/app.js",
   "scripts": {
     "start": "node ./src/bin/www",
+    "cmd": "node ./src/bin/run",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
