--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "graphql": "14.3.1",
     "graphql-tools": "4.0.4",
     "graphql-type-json": "0.3.0",
-    "helmet": "3.15.0",
+    "helmet": "^3.21.3",
     "http": "0.0.0",
     "jsonwebtoken": "8.4.0",
     "merge-graphql-schemas": "1.5.8",
@@ -50,7 +50,9 @@
     "morgan": "1.9.1",
     "path": "0.12.7",
     "uniqid": "5.0.3",
-    "uuid": "3.3.2"
+    "uuid": "3.3.2",
+    "winston": "^3.2.1",
+    "winston-mongodb": "^5.0.1"
   },
   "devDependencies": {}
 }
